--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,10 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+      <script>
+          var module = null;
+      </script>
+      <script data-main="{{main}}" src="lib/require.js"></script>
   </head>
   <body>
     {{{body}}}
