--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,12 +7,9 @@
       <script>
           var module = null;
           requirejs.config({
-              baseUrl: 'modules',
-              paths: {
-                  app: '../{{main}}'
-              }
+              baseUrl: '{{main}}',
           });
-          requirejs(['{{main}}/main']);
+          requirejs(['main']);
       </script>
   </head>
   <body>
